# presensee-public

./: .dockerignore  .env.example  .gitattributes  .gitignore  .version  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  run.sh  test.py
django_project/: settings.py  urls.py  wsgi.py
frontend/: .env  .env.production  .gitignore  index.html  package.json  piket.html  tsconfig.app.json  vite.config.ts
frontend/public/: presensee_wasm_bg.wasm
frontend/src/: App.tsx  AppPiket.tsx  index.css  piket.tsx  sw.js  vite-env.d.ts
main/: admin.py  api.py  api_schemas.py  apps.py  forms.py  middlewares.py  models.py  signals.py  urls.py  views.py  views_import_export.py
main/api/: __init__.py  api.py  schemas.py
main/helpers/: database.py  humanize.py  json.py  pdf.html  pdf.py  redis.py
main/migrations/: 0001_initial.py  0002_alter_absensi_options_alter_kelas_options_and_more.py  0003_absensi_created_at_absensi_updated_at_and_more.py  0004_absensi_by_alter_absensi_created_at_and_more.py  0005_alter_kelas_managers_alter_siswa_kelas.py  0006_alter_user_date_joined_alter_user_is_active_and_more.py  0007_token_is_null.py  0008_siswa_nis_siswa_nisn_alter_user_is_active_and_more.py  0009_alter_absensi_by.py  0010_alter_absensi_options_alter_kelas_options_and_more.py  0010_alter_user_options_alter_user_managers.py  0011_alter_absensi_options_alter_kelas_options_and_more.py  0011_domain_absensi_domain_kelas_domain_and_more.py  0011_remove_absensi_status_absensi__status_and_more.py  0012_absensisession.py  0013_data_user_photo.py  (+6 more)
(+93 files in other folders)
