[project]
name = "absen-siswa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dj-database-url>=2.2.0",
    "django==4.2.*",
    "django-cacheops>=7.2",
    "django-cors-headers>=4.5.0",
    "django-jazzmin>=3.0.1",
    "django-ninja>=1.4.3",
    "dotenv-cli>=3.4.1",
    "granian>=2.6.0",
    "pdfkit>=1.0.0",
    "psycopg[binary]>=3.2.12",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "tzdata>=2025.2",
    "whitenoise>=6.9.0",
]
