[project]
name = "absen-siswa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cryptography>=46.0.3",
    "dj-database-url>=2.2.0",
    "django==5.2.*",
    "django-cacheops",
    "django-cors-headers>=4.5.0",
    "django-jazzmin>=3.0.1",
    "django-ninja>=1.4.3",
    "dotenv-cli>=3.4.1",
    "granian>=2.6.0",
    "lzstring>=1.0.4",
    "openpyxl>=3.1.5",
    "pdfkit>=1.0.0",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.12",
    "pymysql>=1.1.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "tzdata>=2025.2",
    "whitenoise>=6.9.0",
]

[tool.uv.sources]
django-cacheops = { git = "https://github.com/salismazaya/django-cacheops", rev = "salis" }
